--- a/contactanos.html
+++ b/contactanos.html
@@ -43,32 +43,30 @@
     </header>
 
     <main>
-        <section class="section-contact">
-          <div class="contact-form">
-            <div class="form">
-              <div class="texto">
-                <h1>Contactanos!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum 
-                  impedit minima ipsa earum rerum! Ducimus suscipit nulla laudantium 
-                  ullam, nihil corrupti voluptatem deserunt officia, incidunt facilis
-                  labore, autem enim nemo.</p>
+      <section class="section-contact">
+        <div class="contact-form">
+          <div class="form">
+            <div class="texto">
+              <h3>Contactanos!</h3>
+              <p>Estamos aquí para ayudarte en lo que necesites.
+                  Puedes completar el formulario de contacto a continuación</p>
+          </div>
+          <form action="">
+            <div class="input-box">
+              <label for="">Nombre</label>
+              <input type="text" placeholder="Nombre">
             </div>
-            <form action="">
-              <div class="input-box">
-                <label for="">Nombre</label>
-                <input type="text" placeholder="Nombre">
-              </div>
-              <div class="input-box">
-                <label for="">Email</label>
-                <input type="email" placeholder="Email">
-              </div>
-              <div class="input-box">
-                <label for="">Tu mensaje</label>
-                <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje..."></textarea>
-              </div>
-              <input type="submit" value="Enviar mensaje">
-            </form>
+            <div class="input-box">
+              <label for="">Email</label>
+              <input type="email" placeholder="Email">
             </div>
+            <div class="input-box">
+              <label for="">Tu mensaje</label>
+              <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje..."></textarea>
+            </div>
+            <input type="submit" value="Enviar mensaje">
+          </form>
+          </div>
   
             <!--<div class="info">
               <div class="img-box">
@@ -148,9 +146,10 @@
                  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4">NOSOTOROS</h5>
                     <hr class="mb-4">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-                        molestias explicabo consectetur beatae modi accusamus adipisci eius 
-                        sit dolore, vel fugiat commodi. Cum natus perspiciatis esse rem. Amet
+                    <p>Empresa líder en la venta de productos ecuestres. 
+                      También ofrecemos opciones personalizadas para 
+                      adaptarnos a las necesidades individuales de nuestros
+                      clientes.
                     </p>
                     
                </div>
