--- a/somos.html
+++ b/somos.html
@@ -139,9 +139,10 @@
               <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                  <h5 class="mb-4">NOSOTOROS</h5>
                  <hr class="mb-4">
-                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-                     molestias explicabo consectetur beatae modi accusamus adipisci eius 
-                     sit dolore, vel fugiat commodi. Cum natus perspiciatis esse rem. Amet
+                 <p>Empresa líder en la venta de productos ecuestres. 
+                  También ofrecemos opciones personalizadas para 
+                  adaptarnos a las necesidades individuales de nuestros
+                  clientes.
                  </p>
                  
             </div>
