--- a/mi-cuenta.html
+++ b/mi-cuenta.html
@@ -125,9 +125,10 @@
              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h5 class="mb-4">NOSOTOROS</h5>
                 <hr class="mb-4">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-                    molestias explicabo consectetur beatae modi accusamus adipisci eius 
-                    sit dolore, vel fugiat commodi. Cum natus perspiciatis esse rem. Amet
+                <p>Empresa líder en la venta de productos ecuestres. 
+                  También ofrecemos opciones personalizadas para 
+                  adaptarnos a las necesidades individuales de nuestros
+                  clientes.
                 </p>
                 
            </div>
@@ -181,3 +182,8 @@
         </div>
       </div>
    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    </body>
+  </html>
